# ComputationalGeometry

./: .gitignore  CMakeLists.txt
examples/: main.cpp
include/cg/core/: Vec.h
